--- a/angular.json
+++ b/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "1644a06f-894a-4bcc-a273-6acfce8305e6"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
